--- a/src/main/resources/templates/product/product-detail.html
+++ b/src/main/resources/templates/product/product-detail.html
@@ -256,10 +256,10 @@
     <div class="row">
         <!-- 제품 이미지 -->
         <div class="col-md-6 text-center">
-            <img th:src="@{'/uploadfile/' + ${productDTO.imageUrl}}"
+            <img th:src= "${productDTO.imageUrl}"
                  alt="상품 이미지"
                  style="width: 450px; height: auto; object-fit: cover;"
-                 onerror="this.src='/uploadfile/default-image.png';">
+             >
         </div>
 
         <!-- 제품 정보 -->
